kubernetes/jsonplaceholder/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jsonplaceholder
spec:
  hosts:
    - jsonplaceholder.typicode.com
  http:
    - route:
      - destination:
          host: jsonplaceholder.typicode.com
        weight: 100
      fault:
        abort:
          percentage:
            value: 10
          httpStatus: 503
